# recipe-server

./: .gitignore  Cargo.toml  LICENSE  README.md
.sqlx/: query-468d1119ac62d069f558bbb8390afb1687879362727c5123bd0baa0c1d663b75.json  query-701e0437d191c05fe8e5dbc526760744716d5e4abc918bbf12b28ba5e5cb324c.json  query-762b5f8c9bb6ea2366b900b9e9fbe97ae4abbdc6ca43aea2a4973b1c6d6cf395.json  query-9dd0cbad987fa8322d04f9ed9d2c1a2f46e6bdea3af5d3196b9886a2e2896a84.json
assets/static/: recipe.css  recipes.json
assets/templates/: index.html
client-yew/: Cargo.toml  README.md  Trunk.toml  index.html
client-yew/src/: main.rs
migrations/: 0001_init.down.sql  0001_init.up.sql
src/: api.rs  database.rs  error.rs  main.rs  recipe.rs  templates.rs
test/: api.py
