[package]
name = "recipe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
mime = "0.3.17"
axum = "0.8.3"
tracing = "0.1.41"
askama = "0.14.0"
thiserror = "2.0.12"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
clap =  { version = "4.5.37", features = ["derive"] }
log = "0.4.27"

[dependencies.tokio]
version =  "1.44.2"
features =  ["full"]

[dependencies.tokio-stream]
version = "0.1.17"
features = ["full"]

[dependencies.tower-http]
version = "0.6.2"
features = ["fs", "trace", "cors"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.sqlx]
version = "0.8.5"
features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "chrono", "json"]
