[package]
name = "client-yew"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = { version = "0.2.100", features = ["serde", "serde-serialize", "serde_json"] }
wasm-bindgen-futures = "0.4.50"
yew = { version = "0.21.0", features = ["csr"] }
